django-app/postgres-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: app
  labels:
    app: postgres-db
spec:
  clusterIP: None
  ports:
    - port: 5432
      name: postgres-db
  selector:
    app: postgres-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: app
spec:
  serviceName: postgres-db
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres-db
          image: postgres:15
          ports:
            - containerPort: 5432
              name: postgres-db
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: db-pvc
