django-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mysite.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysite
                port:
                  number: 8000
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: mysite
                port:
                  number: 8000
